# itmo-projects

./: .gitignore
Algorithms/2Semester/Lab2/: A5.cpp
Algorithms/3semester/lab1/: A1.java
C++/calc-trig-holeyko/: CMakeLists.docx
C++/calc-trig-holeyko/googletest/: CMakeLists.docx
C++/calc-trig-holeyko/src/: calc.cpp  log.docx
C++/calc-trig-holeyko/test/: CMakeLists.docx
C++/expressions-complex-holeyko/: .gitmodules  README.md
C++/expressions-complex-holeyko/include/: complex.h  (+1 more)
C++/randomized-queue-holeyko/: .gitmodules  CMakeLists.txt  README.md
C++/randomized-queue-holeyko/.github/: CODEOWNERS
C++/randomized-queue-holeyko/include/: randomized_queue.h  subset.h
C++/randomized-queue-holeyko/src/: main.cpp  subset.cpp
C++/second-chance-buddy-holeyko/: .gitignore  .gitmodules  CMakeLists.txt  README.md
C++/wordnet-holeyko/: .gitmodules  CMakeLists.txt  README.md
C++/wordnet-holeyko/.github/: CODEOWNERS
C++/wordnet-holeyko/.github/workflows/: cpp_project.yml
C++/wordnet-holeyko/include/: wordnet.h
C++/wordnet-holeyko/src/: main.cpp  wordnet.cpp
Web/hw3/: .gitignore  README.md  pom.xml
Web/hw4/: .gitignore
Web/hw5/: pom.xml
Web/hw6/: pom.xml
comp-arch/AIC/: CMakeLists.docx  ImageSource.h  main.cpp
comp-arch/Disassembler/: file.elf  out.docx  samplemy.docx
disc-math/lab1/: A.cpp  A.py  F.cpp  H.cpp  H.java
hard-os/os-2022-cow-holeyko/: Makefile  MakefileDebug  grade  xv6-readme.md
hard-os/os-2022-intro-holeyko/: run.sh
hard-os/os-2022-networkfs-holeyko/: Makefile  entrypoint.c  entrypoint.h  nwfscalls.c  nwfscalls.h  token
hard_os/os-2022-intro-holeyko/: fs.img
java-adv/java-advanced-2023/: README.md
java-begin/Markdown/: .gitignore  README.md
java-begin/RumMe/: RunMe.java  Script.bat
java-begin/WordStatInput/: out6.in  test6.in
java-web/hw1/: 100request.sh
java-web/hw10/: package-lock.json
java-web/hw4/: pom.xml
java-web/hw6/: pom.xml
java-web/hw8/: .project
java-web/hw9/: pom.xml
math-logic/dop/: 2(с).tex  2.fdb_latexmk  2.fls  4.fdb_latexmk  4.fls  4.tex
math-logic/hw5/: CMakeLists.txt  main.cpp
math-logic/hw8/: 2.py  8.py
opt-methods/lab1/: app.ipynb
opt-methods/lab2/: excel.py  solution_lab2.ipynb
opt-methods/lab3/: comparing.py  linreg.py  main.py
opt-methods/opt-venv/: pyvenv.cfg
prog-paradigms/Clojure/: .gitignore
web/hw7/: .gitignore  .project  pom.xml
web/hw8/: .gitignore
(+433 files in other folders)
